Done. Very Done.

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -35,7 +35,23 @@
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
-
+    <section class="article">
+        <h3>This Summer is Beautiful!</h3>
+        <picture>
+            <source srcset="images/blossom-flowersLarge.jpg" media="(min-width: 765px)">
+            <source srcset="images/blossom-flowersMed.jpg" media="(min-width: 500px)">
+            <img src="images/blossom-flowersSmall.jpg" alt="blossom flowers">
+        </picture>
+        <p>This summer has been unlike any other; consectetuer adipiscing elit. Sed auctor. Mauris eu purus. Integer vehicula
+            lectus in orci. Integer ultrices. Nulla sollicitudin ligula sit amet nisl. Mauris pulvinar adipiscing
+            orci. Phasellus dignissim purus vel urna.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed auctor. Mauris eu purus. Integer vehicula
+            lectus in orci. Integer ultrices. Nulla sollicitudin ligula sit amet nisl. Mauris pulvinar adipiscing
+            orci. Phasellus dignissim purus vel urna.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed auctor. Mauris eu purus. Integer vehicula
+            lectus in orci. Integer ultrices. Nulla sollicitudin ligula sit amet nisl. Mauris pulvinar adipiscing
+            orci. Phasellus dignissim purus vel urna.</p>   
+    </section>
     <main class="homemain">
         <div class="cards"></div>
     </main>
