got rid of link

--- a/final/index.html
+++ b/final/index.html
@@ -20,7 +20,10 @@
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="preston.html">Preston</a></li>
+            <li><a href="#">Rentals</a></li>
+            <li><a href="#">Reservations</a></li>
+            <li><a href="#">Tours</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     <main>
