--- a/final/index.html
+++ b/final/index.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scoot Home Page</title>
+    <title>~Scoot Home Page</title>
     <meta name="description" content="Scoot Home Page and Portal">
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">        
     <link rel="stylesheet" href="css/large.css">
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Sonsie+One&family=Taviraj:wght@300&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
     <header>
-        <h1>Scoots</h1>
-        <p>Motor Scooter Rental</p>
+        <div class="titlecard">
+            <h1>~Scoots</h1>
+            <h2>Motor Scooter Rental</h2>
+        </div>
+        <img class="icon" src="images/scootsicon.png" alt="pixel scoot logo">
     </header>
     <nav>
         <ul class="navbar">
@@ -27,10 +33,30 @@
         </ul>
     </nav>
     <main>
-        <p>We're located near the Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel and near the Terminal Puerta Maya further south along the coast which caters to the cruise lines and patrons</p>
         
+        <div class="calltoaction">
+            <h2>Need Transport?</h2>
+            <p>Make a rental reservation today!</p>
+        </div>
+        <div id="weathersummary">
+            <h3>What's the Weather Like Today?</h3>
+            <p>Temperature: <span id="temp1"></span>°</p>
+            <p>Weather Summary: <span id="current"></span></p>
+            <p>Humidity: <span id="humidity"></span></p>
+            <p><i>It will be <span id="temp5"></span>° 5 days from now.</i></p>
+        </div>
+        <div>
+            <h2>We Have Many Options to Choose From!</h2>
+            <p>Available Rentals Include: Honda Metro Scooter, Honda Dio Scooter, Honda PCX150 Scooter, Honda Pioneer ATV, 4 Door Jeep Wrangler with A/C, and 2 Door Jeep Wrangler</p>
+        </div>
+        <div>
+            <h2>Where can you Find Us?</h2>
+            <p>We're located near the Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel and near the Terminal Puerta Maya further south along the coast which caters to the cruise lines and patrons</p>
+        </div>
     </main>
     <footer>
+        <p>&copy; 2020 ~Scoots</p>
+
         <div class="socials">
             <a href="https://www.facebook.com/" target="_blank">
                 <img src="images/social-facebookicon.png" alt="facebook icon" />
@@ -46,8 +72,13 @@
             </a>
         </div>
 </footer>
+    <script src="js/navagation.js"></script>
+    <!-- this is commented out so I don't over use it -->
+    <!-- <script src="js/weatherdata.js"></script> -->
+    
+    <!-- fonts aren't loading properly -->
 
-    <script src="https://fonts.googleapis.com/css2?family=Gugi&family=Sonsie+One&display=swap"></script>
+    <!-- <script src="https://fonts.googleapis.com/css2?family=Gugi&family=Sonsie+One&display=swap"></script>
     <script>
         WebFont.load({
             google: {
@@ -55,6 +86,6 @@
                 // font-family: cursive;
             }
         });
-    </script>
+    </script> -->
 </body>
 </html>
