--- a/final/references.html
+++ b/final/references.html
@@ -24,7 +24,7 @@
     <nav>
         <ul class="navbar">
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="rentals.html">Rentals</a></li>
             <li><a href="#">Reservations</a></li>
             <li><a href="#">Tours</a></li>
@@ -32,31 +32,12 @@
         </ul>
     </nav>
     <main>
-        
-        <div class="calltoaction">
-            <h2>Need Transport?</h2>
-            <p>Make a rental reservation today!</p>
-        </div>
-        <div id="weathersummary">
-            <h3>What's the Weather Like Today?</h3>
-            <p>Temperature: <span id="temp1"></span>°</p>
-            <p>Weather Summary: <span id="current"></span></p>
-            <p>Humidity: <span id="humidity"></span></p>
-            <p><i>It will be <span id="temp5"></span>° five days from now.</i></p>
-        </div>
-        <div>
-            <h2>We Have Many Options to Choose From!</h2>
-            <p>Available Rentals Include: Honda Metro Scooter, Honda Dio Scooter, Honda PCX150 Scooter, Honda Pioneer ATV, 4 Door Jeep Wrangler with A/C, and 2 Door Jeep Wrangler</p>
-        </div>
-        <div>
-            <h2>Where can you Find Us?</h2>
-            <p>We're located near the Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel and near the Terminal Puerta Maya further south along the coast which caters to the cruise lines and patrons</p>
-        </div>
+
     </main>
     <footer>
         <div>
             <p>&copy; 2020 ~Scoots</p>
-            <a href="references.html">References</a>
+            <a href="references.html" class="active">References</a>
         </div>
         <div class="socials">
             <a href="https://www.facebook.com/" target="_blank">
