--- a/final/index.html
+++ b/final/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>~Scoot Home Page</title>
-    <meta name="description" content="Scoot Home Page and Portal">
+    <title>~Scoots Home</title>
+    <meta name="description" content="Scoots Home Page and Portal">
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
