--- a/final/rentals.html
+++ b/final/rentals.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>~Scoot Home Page</title>
-    <meta name="description" content="Scoot Home Page and Portal">
+    <title>~Scoots Rentals</title>
+    <meta name="description" content="Scoots rental prices and information">
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -32,6 +32,61 @@
         </ul>
     </nav>
     <main>
+        <section class="forecast">
+            <h3>Price Chart</h3>
+            <table>
+                <tr>
+                    <th><p>Rental</p></th>
+                    <th><p>Half Day Reservation</p></th>
+                    <th><p>Full Day Reservation</p></th>
+                    <th><p>Half Day Walk-in</p></th>
+                    <th><p>Full Day Walk-in</p></th>
+                </tr>
+                <tr>
+                    <td><span id="ren1"></span></td>
+                    <td><span id="rhd1"></span></td>
+                    <td><span id="rfd1"></span></td>
+                    <td><span id="whd1"></span></td>
+                    <td><span id="wfd1"></span></td>
+                </tr>
+                <tr>
+                    <td><span id="ren2"></span></td>
+                    <td><span id="rhd2"></span></td>
+                    <td><span id="rfd2"></span></td>
+                    <td><span id="whd2"></span></td>
+                    <td><span id="wfd2"></span></td>
+                </tr>
+                <tr>
+                    <td><span id="ren3"></span></td>
+                    <td><span id="rhd3"></span></td>
+                    <td><span id="rfd3"></span></td>
+                    <td><span id="whd3"></span></td>
+                    <td><span id="wfd3"></span></td>
+                </tr>
+                <tr>
+                    <td><span id="ren4"></span></td>
+                    <td><span id="rhd4"></span></td>
+                    <td><span id="rfd4"></span></td>
+                    <td><span id="whd4"></span></td>
+                    <td><span id="wfd4"></span></td>
+                </tr>
+                <tr>
+                    <td><span id="ren5"></span></td>
+                    <td><span id="rhd5"></span></td>
+                    <td><span id="rfd5"></span></td>
+                    <td><span id="whd5"></span></td>
+                    <td><span id="wfd5"></span></td>
+                </tr>
+                <tr>
+                    <td><span id="ren6"></span></td>
+                    <td><span id="rhd6"></span></td>
+                    <td><span id="rfd6"></span></td>
+                    <td><span id="whd6"></span></td>
+                    <td><span id="wfd6"></span></td>
+                </tr>
+            </table>
+            <p>(tax is included in the above price)</p>
+        </section>
         <div class="cards"></div>       
     </main>
     <footer>
