first draft of rental page

--- a/final/rentals.html
+++ b/final/rentals.html
@@ -32,7 +32,9 @@
         </ul>
     </nav>
     <main>
-        <section class="forecast">
+
+        <div class="cards"></div>
+        <section class="prices">
             <h3>Price Chart</h3>
             <table>
                 <tr>
@@ -87,7 +89,6 @@
             </table>
             <p>(tax is included in the above price)</p>
         </section>
-        <div class="cards"></div>       
     </main>
     <footer>
         <div>
