added tours and contact links to nav

--- a/final/confirmation.html
+++ b/final/confirmation.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>~Scoot References</title>
-    <meta name="description" content="Scoots References">
+    <title>~Scoot Home Page</title>
+    <meta name="description" content="Scoot Home Page and Portal">
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -26,17 +26,14 @@
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="rentals.html">Rentals</a></li>
-            <li><a href="reservations.html">Reservations</a></li>
+            <li><a href="reservations.html" class="active">Reservations</a></li>
             <li><a href="tours.html">Tours</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <h2>References</h2>
-        <ul>
-            <li><a href="https://www.honda.com/">Honda</a></li>
-            <li><a href="http://www.listofcountriesoftheworld.com">Current List of Countries</a></li>
-        </ul>
+        <h2>Thank You!</h2>
+        <p>Your reservation has been requested. You will recieve an email of confirmation shortly.</p>
     </main>
     <footer>
         <div>
