--- a/final/contact.html
+++ b/final/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>~Scoot References</title>
-    <meta name="description" content="Scoots References">
+    <title>~Scoots Contact Information</title>
+    <meta name="description" content="Scoots Contact Information and Map">
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -28,15 +28,14 @@
             <li><a href="rentals.html">Rentals</a></li>
             <li><a href="reservations.html">Reservations</a></li>
             <li><a href="tours.html">Tours</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <h2>References</h2>
-        <ul>
-            <li><a href="https://www.honda.com/">Honda</a></li>
-            <li><a href="http://www.listofcountriesoftheworld.com">Current List of Countries</a></li>
-        </ul>
+
+
+
+
     </main>
     <footer>
         <div>
