--- a/final/index.html
+++ b/final/index.html
@@ -26,9 +26,9 @@
             <li><a class="ham" onclick="toggleMenu()" href="#">&#9776; Menu</a></li>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="rentals.html">Rentals</a></li>
-            <li><a href="#">Reservations</a></li>
-            <li><a href="#">Tours</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="reservations.html">Reservations</a></li>
+            <li><a href="tours.html">Tours</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
