--- a/final/tours.html
+++ b/final/tours.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>~Scoot References</title>
-    <meta name="description" content="Scoots References">
+    <title>~Scoots Tours</title>
+    <meta name="description" content="Scoots tours and local information">
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -32,16 +32,17 @@
         </ul>
     </nav>
     <main>
-        <h2>References</h2>
-        <ul>
-            <li><a href="https://www.honda.com/">Honda</a></li>
-            <li><a href="http://www.listofcountriesoftheworld.com">Current List of Countries</a></li>
-        </ul>
+
+        <p>To set up a tour, please contact us.</p>
+        <a href="contact.html"><h2>Contact Information</h2></a>
+
+
     </main>
     <footer>
         <div>
-            <p>&copy; 2020 ~Scoots</p>
-            <a href="references.html" class="active">References</a>
+            <p>&copy; 2020 ~Scoots | <a href="references.html">References</a> | <a href="contact.html">Contact Us</a></p>
+            <p class="updateline">Last updated: <span id="update"></span></p>
+            
         </div>
         <div class="socials">
             <a href="https://www.facebook.com/" target="_blank">
@@ -58,20 +59,7 @@
             </a>
         </div>
     </footer>
+    <script>document.getElementById('update').innerHTML = document.lastModified;</script>
     <script src="js/navagation.js"></script>
-    <!-- this is commented out so I don't over use it -->
-    <!-- <script src="js/weatherdata.js"></script> -->
-    
-    <!-- fonts aren't loading properly -->
-
-    <!-- <script src="https://fonts.googleapis.com/css2?family=Gugi&family=Sonsie+One&display=swap"></script>
-    <script>
-        WebFont.load({
-            google: {
-                families: ['Sonsie One', 'Gugi', 'Taviraj', ]
-                // font-family: cursive;
-            }
-        });
-    </script> -->
 </body>
 </html>
