--- a/final/references.html
+++ b/final/references.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="titlecard">
+        <div>
             <h1>~Scoots</h1>
             <h2>Motor Scooter Rental</h2>
         </div>
@@ -33,9 +33,14 @@
     </nav>
     <main>
         <h2>References</h2>
-        <ul>
+        <ul class="references">
             <li><a href="https://www.honda.com/">Honda</a></li>
             <li><a href="http://www.listofcountriesoftheworld.com">Current List of Countries</a></li>
+            <li><a href="https://www.planetware.com/tourist-attractions-/cozumel-mex-qr-coz.htm">11 Top-Rated Tourist Attractions in Cozumel</a></li>
+            <li><a href="https://gettingontravel.com/see-and-do-in-cozumel/">Kicking Back in Cozumel: What to See and Do</a></li>
+            <li><a href="https://www.tripadvisor.com/Attractions-g150809-Activities-Cozumel_Yucatan_Peninsula.html">Things to Do in Cozumel</a></li>
+            <li><a href="https://racheloffduty.com/blog/a-3-day-guide-to-cozumel-mexico">A 3 Day Guide to Cozumel, Mexico</a></li>
+            
         </ul>
     </main>
     <footer>
