--- a/final/reservations.html
+++ b/final/reservations.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div class="titlecard">
+        <div>
             <h1>~Scoots</h1>
             <h2>Motor Scooter Rental</h2>
         </div>
