--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The Preston Idaho page from the 'Weather Me This' website.">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/homesmall.css">
+    <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
 </head>
