enabled weatherdata.js

--- a/final/index.html
+++ b/final/index.html
@@ -76,7 +76,6 @@
     </footer>
     <script>document.getElementById('update').innerHTML = document.lastModified;</script>
     <script src="js/navagation.js"></script>
-    <!-- this is commented out so I don't over use it -->
-    <!-- <script src="js/weatherdata.js"></script> -->
+    <script src="js/weatherdata.js"></script>
 </body>
 </html>
