--- a/final/contact.html
+++ b/final/contact.html
@@ -38,7 +38,9 @@
                 <h3>~Scoots: Motor Scooter Rental</h3>
                 <p>Phone: +1-800-832-3937</p>
                 <p>Email: ~scootsrental@emails.com</p>
-                <p>12340 Rolling Stones LN <br>San Miguel de Cozumel, Quintana Roo, Mexico</p>
+                <h3>We are located at the either of the following addresses:</h3>
+                <p>Av. Rafael E. Melgar 33, Centro<br>77600 Cozumeld, Q.R., Mexico</p>
+                <p>Quintana Roo C-1 1a<br>77600 Q.R., Mexico</p>
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d239283.5522227276!2d-86.87425344999994!3d20.432083550000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sCozumel!5e0!3m2!1sen!2sus!4v1595267518809!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
