--- a/final/index.html
+++ b/final/index.html
@@ -32,10 +32,9 @@
         </ul>
     </nav>
     <main>
-        
         <div class="calltoaction">
-            <h2>Need Transport?</h2>
-            <p>Make a rental reservation today!</p>
+            <h2>Need Transport in Cozumel?</h2>
+            <p>Make a rental reservation today! You can reserve online, or walk into either one of our two locations.</p>
         </div>
         <div id="weathersummary">
             <h3>What's the Weather Like Today?</h3>
@@ -50,7 +49,7 @@
         </div>
         <div>
             <h2>Where can you Find Us?</h2>
-            <p>We're located near the Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel and near the Terminal Puerta Maya further south along the coast which caters to the cruise lines and patrons</p>
+            <p>We're located near the Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel and near the Terminal Puerta Maya further south along the coast!</p>
         </div>
     </main>
     <footer>
