--- a/final/index.html
+++ b/final/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>~Scoots Home</title>
     <meta name="description" content="Scoots Home Page and Portal">
-    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
+    <link rel="shortcut icon" href="images/favicon.ico.png">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">        
@@ -32,7 +32,7 @@
         </ul>
     </nav>
     <main>
-        <div class="calltoaction">
+        <div>
             <h2>Need Transport in Cozumel?</h2>
             <p>Make a rental reservation today! You can reserve online, or walk into either one of our two locations.</p>
         </div>
